# opensource-bounty

./: .gitignore  Dockerfile  README.md  entrypoint.sh
.github/workflows/: bounty.yml  claim.yml
api-proxy/: package-lock.json
client/: package.json
client/src/: FileUploader.js  GitHubCards.js  Login.js  RepoCard.js  Unlock.js  interfaces.tsx
client/src/assets/: Github.js  Logout.js
client/src/services/: services.js
contribute/: Cargo.toml
contribute/meta/: Cargo.toml
contribute/meta/src/: main.rs
contribute/src/: contribute.rs
contribute/wasm/: Cargo.toml
contribute/wasm/src/: lib.rs
sc/: Cargo.toml  counter.json  erdpy-commands.txt
sc/meta/: Cargo.toml
sc/meta/src/: main.rs
sc/src/: contribute.rs  package.json  server.js
sc/src/client/: package-lock.json  package.json
sc/src/client/src/: App.js  AuthRedirectWrapper.js  Home.js  config.js
sc/src/client/src/assets/: colors.js  index.js
sc/wasm/: Cargo.toml
sc/wasm/src/: lib.rs
