[package]
name = "contribute-wasm"
version = "0.0.0"
authors = ["Mihai Cherechesu <mihai.cherechesu@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.contribute]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.5"

[workspace]
members = ["."]
